--- a/styles/student-area.css
+++ b/styles/student-area.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -103,7 +104,7 @@ header {
 .home {
     width: 100%;
     height: 400px;
-    background-image: url(/images/image-home.png);
+    background-image: url(../images/image-home.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -231,7 +232,7 @@ header {
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .course-card {
@@ -240,6 +241,8 @@ header {
     height: auto;
     filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
     transition: 200ms;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .course-card:hover {
