adicionando like na pagina detalhes do curso

--- a/styles/detailed-course.css
+++ b/styles/detailed-course.css
@@ -135,6 +135,9 @@ header {
     border-radius: 4px;
     background-color: #00E394;
     color: #fff;
+    text-align: center;
+    line-height: 40px;
+    display: inline-block;
 }
 
 .inside-course-right {
