--- a/styles/course.css
+++ b/styles/course.css
@@ -26,7 +26,7 @@ header {
     width: 100%;
     height: 100px;
     background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 .inside-header {
@@ -114,6 +114,10 @@ header {
     margin: 0 auto;
 }
 
+.inside-course-title h2 {
+    margin-bottom: 20px;
+}
+
 .inside-course-video-buttons {
     width: 80%;
     height: auto;
@@ -180,12 +184,21 @@ header {
     width: 70%;
 }
 
+.inside-course-right p {
+    margin-bottom: 10px;
+}
+
 iframe {
     width: 100%;
     height: 420px;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 20px;
+}
+
+.info-video {
+    padding: 15px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    margin-bottom: 30px;
 }
 
 .finish-button {
@@ -198,7 +211,7 @@ iframe {
     border: 0;
     cursor: pointer;
     font-size: 16px;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
 }
 
 footer {
