--- a/styles/registration.css
+++ b/styles/registration.css
@@ -122,7 +122,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .registration-button {
-    width: 500px;
+    width: 100%;
     height: 40px;
     border: none;
     cursor: pointer;
