--- a/styles/approve.css
+++ b/styles/approve.css
@@ -22,200 +22,17 @@ label {
   font-weight: 300;
 }
 
-header {
-  width: 100%;
-  height: 100px;
-  background: linear-gradient(90deg, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
-  margin-bottom: 60px;
-}
-
-.inside-header {
-  width: 80%;
-  height: inherit;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.inside-header h2 {
-  font-size: 24px;
-  color: #fff;
-}
-
-.inside-header-menu {
-  display: flex;
-  flex-direction: row;
-  width: auto;
-  justify-content: space-between;
-}
-
-.inside-header-menu a {
-  color: #fff;
-  font-weight: 300;
-}
-
-.item-menu-space {
-  margin-right: 15px;
-}
-
-.inside-header-profile-quit {
-  display: flex;
-  align-items: center;
-  width: auto;
-}
-
-.profile-button {
-  display: flex;
-  flex-direction: row;
-  background-color: #00e394;
-  width: 150px;
-  height: 40px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  margin-right: 40px;
-  color: #fff;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  transition: 300ms;
-  font-weight: 300;
-}
-
-.profile-button:hover {
-  background-color: #05d48c;
-}
-
-.profile-button p {
-  margin-right: 10px;
-}
-
-.inside-header-profile-quit .profile-image {
-  width: 30px;
-  border-radius: 50%;
-}
-
-.quit-button {
-  font-weight: 300;
-  color: #fff;
-}
-
 .approve {
   width: 80%;
   margin: 0 auto;
 }
 
+.container {
+  margin-top: 30px;
+  min-height: 50vh !important;
+  margin-bottom: 60px;
+}
+
 .content-table {
   font-size: 14px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 1;
-}
-
-footer {
-  width: 100%;
-  height: auto;
-  background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
-}
-
-.inside-footer {
-  width: 80%;
-  height: auto;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.inside-footer-div1 {
-  width: 40%;
-}
-
-.inside-footer-div2,
-.inside-footer-div3,
-.inside-footer-div4 {
-  width: 20%;
-}
-
-.inside-footer-div1 h2 {
-  font-size: 32px;
-  font-weight: 300;
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.inside-footer-div1 p {
-  font-size: 24px;
-  font-weight: bold;
-  color: #fff;
-}
-
-.inside-footer-div2 {
-  display: flex;
-  flex-direction: column;
-}
-
-.inside-footer-div2 p {
-  color: #fff;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.inside-footer-div2 a {
-  font-weight: 300;
-  color: #fff;
-  margin-bottom: 10px;
-}
-
-.item-margin {
-  margin-bottom: 0px !important;
-}
-
-.inside-footer-div3-p1 {
-  font-weight: bold;
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.footer-icons {
-  display: flex;
-  width: 115px;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 40px;
-}
-
-.inside-footer-div3-p2 {
-  font-weight: bold;
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.inside-footer-div3-p3 {
-  color: #fff;
-}
-
-.inside-footer-div4-p1 {
-  font-weight: bold;
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.inside-footer-div4-p2 {
-  font-weight: 300;
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.inside-footer-div4-p3 {
-  font-weight: bold;
-  color: #fff;
-}
-
-.unifeob-logo {
-  width: 100px;
 }
