--- a/styles/detailed-course.css
+++ b/styles/detailed-course.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -22,88 +21,11 @@ label {
     font-weight: 300;
 }
 
-header {
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
-    margin-bottom: 60px;
-}
-
-.inside-header {
-    width: 80%;
-    height: inherit;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.inside-header h2 {
-    font-size: 24px;
-    color: #fff;
-}
-
-.inside-header-menu {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    justify-content: space-between;
-}
-
-.inside-header-menu a {
-    color: #fff;
-    font-weight: 300;
-}
-
-.item-menu-space {
-    margin-right: 15px;
-}
-
-.inside-header-profile-quit {
-    display: flex;
-    align-items: center;
-    width: auto;
-}
-
-.profile-button {
-    display: flex;
-    flex-direction: row;
-    background-color: #00E394;
-    width: 150px;
-    height: 40px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    margin-right: 40px;
-    color: #fff;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    transition: 300ms;
-    font-weight: 300;
-}
-
-.profile-button:hover {
-    background-color: #05d48c;
-}
-
-.profile-button p {
-    margin-right: 10px;
-}
-
-.inside-header-profile-quit .profile-image {
-    width: 30px;
-    border-radius: 50%;
-}
-
-.quit-button {
-    font-weight: 300;
-    color: #fff;
-}
-
 .course {
+    margin-top: 30px;
     width: 100%;
     height: auto;
+    margin-bottom: 30px;
 }
 
 .inside-course {
@@ -131,28 +53,14 @@ header {
 .registration-button {
     height: 40px;
     border: 0;
+    cursor: pointer;
     border-radius: 4px;
     background-color: #00E394;
     color: #fff;
     text-align: center;
     line-height: 40px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: inline-block;
 }
-
-
-/* buton teste curtida */
-
-.registration-button a {
-    display: flex;
-    flex-direction: row;
-    color: #fff;
-    cursor: pointer;
-}
-
-
-/* buton teste curtida */
 
 .inside-course-right {
     width: 100%;
@@ -166,10 +74,7 @@ header {
 }
 
 .inside-course-right-top-content {
-    padding: 40px;
-    background-color: #fff;
     border-radius: 4px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .inside-course-right-top-content h2 {
@@ -177,13 +82,15 @@ header {
 }
 
 .inside-course-right-bottom {
-    padding: 40px;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     background-color: #fff;
     border-radius: 4px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    margin-bottom: 60px;
+    justify-content: flex-end;
+}
+
+.inside-course-right-bottom div {
+    margin-right: 30px;
 }
 
 .inside-course-right-bottom img {
@@ -192,132 +99,26 @@ header {
     margin-right: 20px;
 }
 
-footer {
-    width: 100%;
-    height: auto;
-    background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
+@media screen and (max-width: 700px) {
+    .inside-course {
+        flex-direction: column;
+    }
+
+    .inside-course-left img {
+        width: 100%;
+        max-height: 40vh;
+        min-height: 30vh;
+    }
+
+    .registration-button {
+        margin-bottom: 20px;
+    }
+
+    .inside-course-right-bottom {
+        flex-direction: column-reverse;
+    }
+
+    .inside-course-right-bottom div {
+        margin-bottom: 20px;
+    }
 }
-
-.inside-footer {
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.inside-footer-div1 {
-    width: 40%;
-}
-
-.inside-footer-div2,
-.inside-footer-div3,
-.inside-footer-div4 {
-    width: 20%;
-}
-
-.inside-footer-div1 h2 {
-    font-size: 32px;
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div1 p {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-}
-
-.inside-footer-div2 {
-    display: flex;
-    flex-direction: column;
-}
-
-.inside-footer-div2 p {
-    color: #fff;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div2 a {
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 10px;
-}
-
-.item-margin {
-    margin-bottom: 0px !important;
-}
-
-.inside-footer-div3-p1 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.footer-icons {
-    display: flex;
-    width: 115px;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-
-.inside-footer-div3-p2 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div3-p3 {
-    color: #fff;
-}
-
-.inside-footer-div4-p1 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div4-p2 {
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div4-p3 {
-    font-weight: bold;
-    color: #fff;
-}
-
-.unifeob-logo {
-    width: 100px;
-}
-
-
-/* like */
-
-
-/* .inside-course-left-like {
-    background: #00E394;
-    display: flex;
-    width: auto;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 10px;
-    padding: 1px;
-}
-
-.inside-course-number {
-    color: #fff;
-    margin-left: 25px;
-    border-radius: 10px;
-    width: 20px;
-    font-size: 30px;
-    font-weight: 200;
-} */
