--- a/styles/student-area.css
+++ b/styles/student-area.css
@@ -1,104 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
+html {
     scroll-behavior: smooth;
-}
-
-a {
-    text-decoration: none;
-    color: #000;
-}
-
-p {
-    font-size: 16px;
-    font-weight: 300;
-}
-
-label {
-    font-weight: 300;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
-}
-
-.inside-header {
-    width: 80%;
-    height: inherit;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.inside-header h2 {
-    font-size: 24px;
-    color: #fff;
-}
-
-.inside-header-menu {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    justify-content: space-between;
-}
-
-.inside-header-menu a {
-    color: #fff;
-    font-weight: 300;
-}
-
-.item-menu-space {
-    margin-right: 15px;
-}
-
-.inside-header-profile-quit {
-    display: flex;
-    align-items: center;
-    width: auto;
-}
-
-.profile-button {
-    display: flex;
-    flex-direction: row;
-    background-color: #00E394;
-    width: 150px;
-    height: 40px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    margin-right: 40px;
-    color: #fff;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    transition: 300ms;
-    font-weight: 300;
-}
-
-.profile-button:hover {
-    background-color: #05d48c;
-}
-
-.profile-button p {
-    margin-right: 10px;
-}
-
-.inside-header-profile-quit .profile-image {
-    width: 30px;
-    border-radius: 50%;
-}
-
-.quit-button {
-    font-weight: 300;
-    color: #fff;
 }
 
 .home {
@@ -140,6 +48,7 @@ header {
 
 .inside-step {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
 }
@@ -176,6 +85,7 @@ header {
 
 .inside-hello-student {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     text-align: center;
@@ -205,6 +115,7 @@ header {
 
 .inside-available-courses {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     text-align: center;
@@ -295,6 +206,7 @@ header {
 
 .inside-report {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     text-align: center;
@@ -326,111 +238,20 @@ header {
     background-color: #05d48c;
 }
 
-footer {
-    width: 100%;
-    height: auto;
-    background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
-}
-
-.inside-footer {
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.inside-footer-div1 {
-    width: 40%;
-}
-
-.inside-footer-div2,
-.inside-footer-div3,
-.inside-footer-div4 {
-    width: 20%;
-}
-
-.inside-footer-div1 h2 {
-    font-size: 32px;
-    font-weight: 300;
+.inside-hello-student form button {
+    border: 0;
+    display: inline-block;
+    background-color: #00E394;
     color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div1 p {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-}
-
-.inside-footer-div2 {
-    display: flex;
-    flex-direction: column;
-}
-
-.inside-footer-div2 p {
-    color: #fff;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div2 a {
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 10px;
-}
-
-.item-margin {
-    margin-bottom: 0px !important;
-}
-
-.inside-footer-div3-p1 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.footer-icons {
-    display: flex;
-    width: 115px;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-
-.inside-footer-div3-p2 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div3-p3 {
-    color: #fff;
-}
-
-.inside-footer-div4-p1 {
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div4-p2 {
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.inside-footer-div4-p3 {
-    font-weight: bold;
-    color: #fff;
-}
-
-.unifeob-logo {
     width: 100px;
+    height: 40px;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.inside-available-courses select {
+    height: 40px;
 }
 
 
@@ -470,4 +291,235 @@ footer {
     background-color: #e9ecef;
     outline: 0;
     box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25)
+}
+
+@media screen and (max-width: 900px) {
+    .inside-hello-student-input[type="text"] {
+        width: 330px;
+    }
+
+    .inside-step-cards {
+        flex-direction: column;
+    }
+
+    .card {
+        align-items: center;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        padding: 30px;
+        margin-bottom: 20px;
+    }
+
+    .title-card {
+        text-align: center;
+    }
+
+    .text-card {
+        text-align: center;
+    }
+
+    .img-card {
+        display: block;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .inside-footer {
+        flex-direction: column;
+    }
+
+    .inside-footer-div1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .inside-footer-div2,
+    .inside-footer-div3,
+    .inside-footer-div4 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .inside-footer-div3-p1 {
+        margin-bottom: 10px;
+    }
+
+    .footer-icons {
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+
+    .inside-footer-div3-p2 {
+        margin-bottom: 10px;
+    }
+
+    .inside-footer-div3-p3 {
+        margin-bottom: 40px;
+    }
+
+    .inside-footer-div4-p1 {
+        margin-bottom: 10px;
+    }
+
+    /* paginação estilo */
+    .pagination {
+        display: flex;
+        width: 200px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .page-link {
+        margin-left: -1px;
+        display: inline-block;
+        color: #0d6efd;
+        text-decoration: none;
+        background-color: #fff;
+        border: 1px solid #dee2e6;
+        padding: 0.4em 0.9rem;
+        border-top-left-radius: .25rem;
+        border-bottom-left-radius: .25rem;
+        border-top-right-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .page-link:hover {
+        z-index: 2;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        border-color: #dee2e6
+    }
+
+    .page-link:focus {
+        z-index: 3;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        outline: 0;
+        box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25)
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .inside-footer {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    .inside-footer-div2,
+    .inside-footer-div3,
+    .inside-footer-div4 {
+        width: 100%;
+    }
+
+    .inside-hello-student form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inside-hello-student-input[type="text"] {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .inside-hello-student form button {
+        border: 0;
+        display: inline-block;
+        background-color: #00E394;
+        color: #fff;
+        width: 100%;
+        height: 40px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+
+    .inside-available-courses select {
+        width: 100%;
+    }
+
+    /* paginação estilo */
+    .pagination {
+        display: flex;
+        width: 200px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .page-link {
+        margin-left: -1px;
+        display: inline-block;
+        color: #0d6efd;
+        text-decoration: none;
+        background-color: #fff;
+        border: 1px solid #dee2e6;
+        padding: 0.4em 0.9rem;
+        border-top-left-radius: .25rem;
+        border-bottom-left-radius: .25rem;
+        border-top-right-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .page-link:hover {
+        z-index: 2;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        border-color: #dee2e6
+    }
+
+    .page-link:focus {
+        z-index: 3;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        outline: 0;
+        box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25)
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .inside-home h1 {
+        width: 100%;
+        border-radius: 0px;
+        font-size: 22px;
+    }
+
+    nav {
+        width: 95%;
+    }
+
+    /* paginação estilo */
+    .pagination {
+        display: flex;
+        width: 200px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .page-link {
+        margin-left: -1px;
+        display: inline-block;
+        color: #0d6efd;
+        text-decoration: none;
+        background-color: #fff;
+        border: 1px solid #dee2e6;
+        padding: 0.4em 0.9rem;
+        border-top-left-radius: .25rem;
+        border-bottom-left-radius: .25rem;
+        border-top-right-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .page-link:hover {
+        z-index: 2;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        border-color: #dee2e6
+    }
+
+    .page-link:focus {
+        z-index: 3;
+        color: #0a58ca;
+        background-color: #e9ecef;
+        outline: 0;
+        box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25)
+    }
 }
