--- a/styles/website.css
+++ b/styles/website.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+.logo {
+    width: 80px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
@@ -21,7 +29,7 @@ a {
 
 .initial {
     width: 100%;
-    height: 700px;
+    height: 800px;
     background-image: url(../images/background-main.svg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -30,6 +38,7 @@ a {
 
 header {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     padding-top: 50px;
@@ -49,7 +58,7 @@ header nav {
     width: 550px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around ;
+    justify-content: space-around;
 }
 
 header nav a {
@@ -70,8 +79,22 @@ header nav a {
     margin-right: 30px;
 }
 
+.login-button-footer {
+    width: 150px;
+    display: inline-block;
+    background-color: #00E394;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin-right: 30px;
+}
+
 .inside-main {
     width: 80%;
+    max-width: 1366px;
     display: flex;
     flex-direction: row;
     margin: 0 auto;
@@ -113,11 +136,12 @@ header nav a {
     width: 100%;
     height: auto;
     margin-bottom: 100px;
-    
+
 }
 
 .inside-cards {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -135,7 +159,7 @@ header nav a {
     background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
     align-items: center;
     justify-content: center;
-    color: #fff ;
+    color: #fff;
 }
 
 .inside-cards-div img {
@@ -155,6 +179,7 @@ header nav a {
 
 .inside-about {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     background: linear-gradient(90deg, #16D9E3 0%, #30C7EC 47%, #46AEF7 100%);
@@ -192,6 +217,7 @@ header nav a {
 
 .inside-category {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
 }
@@ -346,19 +372,6 @@ header nav a {
     color: #fff;
 }
 
-.detail {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.detail img {
-    margin-top: -830px;
-    margin-right: 200px;
-}
-
 .benefits {
     width: 100%;
     height: auto;
@@ -367,6 +380,7 @@ header nav a {
 
 .section-benefits {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     display: flex;
@@ -410,6 +424,7 @@ header nav a {
 
 .inside-contact {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     display: flex;
@@ -481,6 +496,7 @@ footer {
 
 .inside-footer {
     width: 80%;
+    max-width: 1366px;
     height: auto;
     margin: 0 auto;
     display: flex;
@@ -575,11 +591,228 @@ footer {
     color: #fff;
 }
 
-.unifeob-logo {
-    width: 100px;
+@media screen and (max-width: 1160px) {
+    .inside-main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .to-teach-button {
+        margin-bottom: 30px;
+        width: 100%;
+    }
+
+    .inside-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inside-cards-div {
+        width: 60%;
+        margin-bottom: 20px;
+    }
+
+    .inside-category-div {
+        flex-wrap: wrap;
+    }
+
+    .inside-highlights-div-card {
+        flex-wrap: wrap;
+    }
+
+    .inside-highlights-div-card {
+        width: calc(100% / 3.2);
+    }
+
+    .inside-highlights-div-card img {
+        width: 100%;
+    }
+
+    .contact {
+        margin-bottom: 80px;
+    }
+
+    .inside-contact-div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inside-contact-div img {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+
+    .align-text {
+        text-align: center;
+        font-weight: lighter;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    .inside-footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inside-footer-div1 {
+        text-align: center;
+        width: 100%;
+    }
+
+    .login-button {
+        margin-right: 0;
+        width: 20%;
+    }
+
+    .login-button-footer {
+        margin-right: 0;
+        margin-bottom: 40px;
+    }
+
+    .inside-footer-div2, .inside-footer-div3, .inside-footer-div4 {
+        text-align: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .footer-icons {
+        align-items: center;
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+
+    .inside-footer-div3-p3 {
+        margin-bottom: 40px;
+    }
 }
 
+@media screen and (max-width: 800px) {
+    .inside-about {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 
+    .inside-about .inside-about-title {
+        padding-left: 40px;
+    }
 
+    .inside-about .inside-about-text {
+        padding-left: 40px;
+    }
 
+    .inside-cards-div {
+        width: 100%;
+    }
 
+    .category {
+        display: none;
+    }
+
+    .inside-highlights-div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .inside-highlights-div-card {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+
+    .inside-highlights-div-card img {
+        object-fit: cover;
+    }
+
+    .section-benefits-div {
+        flex-direction: column;
+    }
+
+    .section-benefits-div-card {
+        margin-bottom: 20px;
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .section-benefits-div-card img {
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    header {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .section-benefits p {
+        text-align: center;
+    }
+
+    .inside-main-right img {
+        width: 100%;
+    }
+
+    .inside-student-text {
+        width: 85%;
+    }
+
+    .login-button {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .course-button {
+        width: 80%;
+    }
+
+    .login-button-footer {
+        width: 100%;
+    }
+
+    form {
+        box-shadow: none;
+    }
+
+    .inside-form {
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    h1 {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    .inside-main-left p {
+        text-align: center;
+    }
+
+    .inside-about img {
+        display: none;
+    }
+
+    .inside-about-text {
+        padding-bottom: 40px;
+    }
+
+    .inside-highlights-div-card {
+        width: 100%;
+    }
+
+    .inside-contact p {
+        text-align: center;
+    }
+
+    .submit-button {
+        width: 100%;
+    }
+
+    .section-benefits-div-card img {
+        display: none;
+    }
+}
