--- a/styles/website.css
+++ b/styles/website.css
@@ -189,20 +189,16 @@ header nav a {
     font-weight: lighter;
     display: flex;
     flex-direction: row;
+    padding: 40px;
 }
 
 .inside-about img {
     width: 150px;
     margin-right: 40px;
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-bottom: 40px;
 }
 
 .inside-about .inside-about-title {
     font-weight: bold;
-    margin-bottom: 20px;
-    padding-top: 40px;
 }
 
 .inside-about .inside-about-text {
@@ -355,8 +351,7 @@ header nav a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 80px;
 }
 
 .inside-student-title {
@@ -367,7 +362,6 @@ header nav a {
 
 .inside-student-text {
     font-weight: lighter;
-    width: 360px;
     text-align: center;
     color: #fff;
 }
@@ -396,8 +390,8 @@ header nav a {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    gap: 40px;
+    justify-content: center;
 }
 
 .section-benefits-div-card {
@@ -410,6 +404,8 @@ header nav a {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    width: 300px;
+    height: auto;
 }
 
 .section-benefits-div-card img {
@@ -686,6 +682,22 @@ footer {
     .inside-footer-div3-p3 {
         margin-bottom: 40px;
     }
+
+    .section-benefits-div {
+        flex-direction: column;
+    }
+
+    .section-benefits-div-card {
+        margin-bottom: 20px;
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .section-benefits-div-card img {
+        margin-right: 20px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -724,21 +736,7 @@ footer {
         object-fit: cover;
     }
 
-    .section-benefits-div {
-        flex-direction: column;
-    }
 
-    .section-benefits-div-card {
-        margin-bottom: 20px;
-        width: 100%;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .section-benefits-div-card img {
-        margin-right: 20px;
-    }
 }
 
 @media screen and (max-width: 650px) {
